# cit-server-launcher

./: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  main.rs
src/lib/components/: index.ts
src/lib/components/Button/: SolidButton.svelte
src/lib/components/Logotype/: LogotypeBasic.svelte  index.ts
src/lib/components/Navbar/: DefaultNavbar.svelte  index.ts
src/lib/components/Sidebar/: CommonSidebar.svelte  index.ts
src/lib/components/Spinners/: CircleSpinner.svelte  index.ts
src/lib/config/: index.ts
src/lib/config/UserGridMenu/: UserGridMenuEntries.ts  index.ts
src/lib/downloader/: DownloaderStore.ts  SerializedDownloaderStore.ts  index.ts
src/lib/downloader/types/: DownloadeState.ts  StoreInterface.ts  index.ts
src/lib/games/: CurrentGameStore.ts  index.ts
src/lib/games/news/: NewsStore.ts  index.ts
src/lib/games/types/: ECurrentGameStatus.ts  StoreInterface.ts  index.ts
src/lib/helpers/: getStore.ts  index.ts  parseDownloadsManifest.ts
src/lib/helpers/launcher/: index.ts  launchMinecraft.ts
src/lib/pocketbase/: PocketbaseInstance.ts  index.ts
src/lib/stores/AuthStore/: AuthStore.ts  SerializedAuthStore.ts
src/lib/types/entities/: DownloadsEntity.ts  GameEntity.ts  PostsEntity.ts  index.ts
src/pages/: AuthPage.svelte  GamePage.svelte  LoadingPage.svelte  PlayboxInfoPage.svelte  PostPage.svelte  SettingsPage.svelte
src/pages/PlayboxInfo/: BackgroundTexts.ts  MovingBackground.svelte  index.ts
(+28 files in other folders)
